fix bug 400 : <td nowrap> dans l'historique, and improve history tables, plus some code formating
git-svn-id: http://piwigo.org/svn/trunk@1339 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/template/yoga/theme/clear/theme.css
+++ b/template/yoga/theme/clear/theme.css
@@ -10,7 +10,7 @@ BODY, H3, .throw {
   background-color: #ffffff;	/* white */
 }
 
-H2, #menubar DT, #imageHeaderBar, #imageToolBar A:hover {
+H2, #menubar DT, #imageHeaderBar, #imageToolBar A:hover, .row1 {
   background-color: #d3d3d3;
 }
 
